<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_question"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:maxLines = "5"
		android:scrollbars = "vertical"
        android:text="" />

    <CheckBox
        android:id="@+id/chk_answer_a"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="" 
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/chk_answer_b"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="" 
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/chk_answer_c"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="" 
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/chk_answer_d"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="" 
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/chk_answer_e"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="" 
        android:onClick="onCheckBoxClick"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSubmitClick"
            android:text="@string/lbl_submit" />

        <Button
            android:id="@+id/btn_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCorrectionClick"
            android:text="@string/lbl_correction" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_skip" 
            android:onClick="onSkipClick"/>

        <ImageView
            android:id="@+id/img_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>